--- a/plantsuwa/Gemfile
+++ b/plantsuwa/Gemfile
@@ -1,10 +1,30 @@
 source 'https://rubygems.org'
+ruby '2.1.1'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.3'
 
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+gem 'simplecov'								# Code coverage
+gem 'bcrypt-ruby', '3.1.2'		# Password encryption
+gem 'paperclip', '4.1'				# Image attachments
+gem 'will_paginate', '3.0.4'	# Pagination
+gem 'faker', '1.2.0'					# Test data
+gem 'redcarpet'								# Markdown ?
+gem 'font-awesome-rails'			# Font awesome (icons) ?
+gem 'sqlite3', '1.3.8'				# SQL (database)
+
+group :development, :test do
+  gem 'rspec-rails', '2.13.1'
+end
+
+group :test do
+  gem 'selenium-webdriver'
+  gem 'capybara'
+  gem 'factory_girl_rails', '4.2.1'
+end
+
+
+
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
@@ -22,7 +42,7 @@ gem 'coffee-rails', '~> 4.0.0'
 gem 'jquery-rails'
 
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
-gem 'turbolinks'
+# gem 'turbolinks'
 
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
@@ -32,8 +52,6 @@ group :doc do
   gem 'sdoc', require: false
 end
 
-# Use ActiveModel has_secure_password
-# gem 'bcrypt-ruby', '~> 3.1.2'
 
 # Use unicorn as the app server
 # gem 'unicorn'
