--- a/plantsuwa/Gemfile
+++ b/plantsuwa/Gemfile
@@ -13,6 +13,8 @@ gem 'redcarpet'								# Markdown ?
 gem 'font-awesome-rails'			# Font awesome (icons) ?
 gem 'sqlite3', '1.3.8'				# SQL (database)
 
+gem 'simple_form'             # Forms
+
 group :development, :test do
   gem 'rspec-rails', '2.13.1'
 end
