--- a/plantsuwa/Gemfile
+++ b/plantsuwa/Gemfile
@@ -14,6 +14,7 @@ gem 'font-awesome-rails'			# Font awesome (icons) ?
 gem 'sqlite3', '1.3.8'				# SQL (database)
 
 gem 'simple_form'             # Forms
+gem 'scoped_search'           # Search
 
 group :development, :test do
   gem 'rspec-rails', '2.13.1'
