--- a/plantsuwa/Gemfile
+++ b/plantsuwa/Gemfile
@@ -16,6 +16,7 @@ gem 'sqlite3', '1.3.8'				# SQL (database)
 
 gem 'simple_form'             # Forms
 gem 'scoped_search'           # Search
+gem 'rack-offline'
 
 group :development, :test do
   gem 'rspec-rails', '2.13.1'
