--- a/plantsuwa/Gemfile
+++ b/plantsuwa/Gemfile
@@ -9,8 +9,8 @@ gem 'bcrypt-ruby', '3.1.2'		# Password encryption
 gem 'paperclip', '4.1'				# Image attachments
 gem 'will_paginate', '3.0.4'	# Pagination
 gem 'will_paginate-bootstrap'	# Pagination (with Boostrap styling)
-gem 'faker', '1.2.0'					# Test data
-gem 'redcarpet'								# Markdown ?
+#gem 'faker', '1.2.0'					# Test data
+#gem 'redcarpet'							# Markdown ?
 gem 'font-awesome-rails'			# Font awesome (icons) ?
 gem 'sqlite3', '1.3.8'				# SQL (database)
 
