--- a/plantsuwa/Gemfile
+++ b/plantsuwa/Gemfile
@@ -16,6 +16,9 @@ gem 'sqlite3', '1.3.8'				# SQL (database)
 
 gem 'simple_form'             # Forms
 gem 'scoped_search'           # Search
+
+gem 'jquery-ui-rails'
+gem 'rails4-autocomplete'
 #gem 'rack-offline'
 
 group :development, :test do
